--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/Gataro3Dev/Rest_API/issues"
   },
-  "homepage": "https://github.com/Gataro3Dev/Rest_API#readme"
+  "homepage": "https://github.com/Gataro3Dev/Rest_API#readme",
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
+    "debug": "^2.2.0",
+    "ejs": "^2.4.1",
+    "express": "^4.13.4",
+    "morgan": "^1.7.0",
+    "serve-favicon": "^2.3.0"
+  }
 }
